// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Contact page The Personal module renders correctly 1`] = `
<div
  className="MuiContainer-root MuiContainer-disableGutters css-q7bdj4-MuiContainer-root"
>
  <h4
    className="MuiTypography-root MuiTypography-h4 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial makeStyles-header-1 css-5lbw0b-MuiTypography-root"
  >
    Personal Information
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        Phone
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        (226) 929 -5495
      </p>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        Email1:
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        l23chen@uwaterloo.ca
      </p>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        Email2:
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        renfrew.liangchen@gmail.com
      </p>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        Address
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
      >
        Hamilton, ON. (willing to move)
      </p>
    </div>
  </div>
</div>
`;

exports[`Testing the Contact page The entired contact module renders correctly 1`] = `
<main
  className="MuiContainer-root MuiContainer-disableGutters makeStyles-container-13 css-q7bdj4-MuiContainer-root"
>
  <h2
    className="MuiTypography-root MuiTypography-h2 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial makeStyles-header-14 css-1sra7t5-MuiTypography-root"
  >
    Contact Me
  </h2>
  <div
    className="MuiContainer-root MuiContainer-disableGutters css-q7bdj4-MuiContainer-root"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial makeStyles-header-1 css-5lbw0b-MuiTypography-root"
    >
      Personal Information
    </h4>
    <div
      className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          Phone
        </p>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          (226) 929 -5495
        </p>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          Email1:
        </p>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          l23chen@uwaterloo.ca
        </p>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          Email2:
        </p>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          renfrew.liangchen@gmail.com
        </p>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container makeStyles-line-2 css-15fev7r-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          Address
        </p>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item css-10texkh-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial css-ahj2mt-MuiTypography-root"
        >
          Hamilton, ON. (willing to move)
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiContainer-root MuiContainer-disableGutters css-q7bdj4-MuiContainer-root"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial makeStyles-header-3 css-5lbw0b-MuiTypography-root"
    >
      Send Message
    </h4>
    <form
      autoComplete="off"
      className="MuiGrid-root MuiGrid-container makeStyles-parent-4 css-15fev7r-MuiGrid-root"
      onSubmit={[Function]}
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-5 makeStyles-leftContainer-7 css-1gqg8cn-MuiGrid-root"
      >
        <div
          className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
            data-shrink={false}
            htmlFor="name"
            id="name-label"
          >
            Name
            <span
              aria-hidden={true}
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-luel6v-MuiInputBase-root"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiOutlinedInput-input MuiInputBase-input css-gga68z-MuiInputBase-input"
              disabled={false}
              id="name"
              name="name"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              type="text"
              value=""
            />
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="PrivateNotchedOutline-legendLabelled-11"
              >
                <span>
                  Name
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-7 makeStyles-rightContainer-8 css-roj13u-MuiGrid-root"
      >
        <div
          className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
            data-shrink={false}
            htmlFor="email"
            id="email-label"
          >
            Email
            <span
              aria-hidden={true}
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-luel6v-MuiInputBase-root"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiOutlinedInput-input MuiInputBase-input css-gga68z-MuiInputBase-input"
              disabled={false}
              id="email"
              name="email"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              type="email"
              value=""
            />
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="PrivateNotchedOutline-legendLabelled-11"
              >
                <span>
                  Email
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-7 makeStyles-rightContainer-8 css-roj13u-MuiGrid-root"
      >
        <div
          className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink={false}
            htmlFor="website"
            id="website-label"
          >
            Website
          </label>
          <div
            className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-luel6v-MuiInputBase-root"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiOutlinedInput-input MuiInputBase-input css-gga68z-MuiInputBase-input"
              disabled={false}
              id="website"
              name="website"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="url"
              value=""
            />
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="PrivateNotchedOutline-legendLabelled-11"
              >
                <span>
                  Website
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-12 css-nvm0ql-MuiGrid-root"
      >
        <div
          className="MuiFormControl-root MuiTextField-root makeStyles-textField-5 MuiFormControl-marginNormal MuiFormControl-fullWidth"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink={false}
            htmlFor="message"
            id="message-label"
          >
            Type your message here
          </label>
          <div
            className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiOutlinedInput-multiline MuiInputBase-multiline css-mad0u6-MuiInputBase-root"
            onClick={[Function]}
          >
            <textarea
              aria-invalid={false}
              autoFocus={false}
              className="MuiOutlinedInput-input MuiInputBase-input MuiOutlinedInput-inputMultiline MuiInputBase-inputMultiline css-kjyl2c-MuiInputBase-input"
              disabled={false}
              id="message"
              name="message"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              rows={5}
              value=""
            />
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="PrivateNotchedOutline-legendLabelled-11"
              >
                <span>
                  Type your message here
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 makeStyles-sendButton-6 css-ic93ua-MuiGrid-root"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge css-1olissi-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="submit"
        >
          <span
            className="MuiButton-label css-8xplcm-MuiButton-label"
          >
            SEND
          </span>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </form>
  </div>
</main>
`;

exports[`Testing the Contact page The send message  module renders correctly 1`] = `
<div
  className="MuiContainer-root MuiContainer-disableGutters css-q7bdj4-MuiContainer-root"
>
  <h4
    className="MuiTypography-root MuiTypography-h4 MuiTypography-colorInitial MuiTypography-alignInherit MuiTypography-displayInitial makeStyles-header-3 css-5lbw0b-MuiTypography-root"
  >
    Send Message
  </h4>
  <form
    autoComplete="off"
    className="MuiGrid-root MuiGrid-container makeStyles-parent-4 css-15fev7r-MuiGrid-root"
    onSubmit={[Function]}
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-5 makeStyles-leftContainer-7 css-1gqg8cn-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink={false}
          htmlFor="name"
          id="name-label"
        >
          Name
          <span
            aria-hidden={true}
            className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-luel6v-MuiInputBase-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiOutlinedInput-input MuiInputBase-input css-gga68z-MuiInputBase-input"
            disabled={false}
            id="name"
            name="name"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="text"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="PrivateNotchedOutline-legendLabelled-11"
            >
              <span>
                Name
                 *
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-7 makeStyles-rightContainer-8 css-roj13u-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink={false}
          htmlFor="email"
          id="email-label"
        >
          Email
          <span
            aria-hidden={true}
            className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-luel6v-MuiInputBase-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiOutlinedInput-input MuiInputBase-input css-gga68z-MuiInputBase-input"
            disabled={false}
            id="email"
            name="email"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="email"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="PrivateNotchedOutline-legendLabelled-11"
            >
              <span>
                Email
                 *
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-7 makeStyles-rightContainer-8 css-roj13u-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink={false}
          htmlFor="website"
          id="website-label"
        >
          Website
        </label>
        <div
          className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-luel6v-MuiInputBase-root"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiOutlinedInput-input MuiInputBase-input css-gga68z-MuiInputBase-input"
            disabled={false}
            id="website"
            name="website"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="url"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="PrivateNotchedOutline-legendLabelled-11"
            >
              <span>
                Website
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-7 MuiGrid-grid-md-12 css-nvm0ql-MuiGrid-root"
    >
      <div
        className="MuiFormControl-root MuiTextField-root makeStyles-textField-5 MuiFormControl-marginNormal MuiFormControl-fullWidth"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink={false}
          htmlFor="message"
          id="message-label"
        >
          Type your message here
        </label>
        <div
          className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiOutlinedInput-multiline MuiInputBase-multiline css-mad0u6-MuiInputBase-root"
          onClick={[Function]}
        >
          <textarea
            aria-invalid={false}
            autoFocus={false}
            className="MuiOutlinedInput-input MuiInputBase-input MuiOutlinedInput-inputMultiline MuiInputBase-inputMultiline css-kjyl2c-MuiInputBase-input"
            disabled={false}
            id="message"
            name="message"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={5}
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="PrivateNotchedOutline-legendLabelled-11"
            >
              <span>
                Type your message here
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 makeStyles-sendButton-6 css-ic93ua-MuiGrid-root"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge css-1olissi-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="submit"
      >
        <span
          className="MuiButton-label css-8xplcm-MuiButton-label"
        >
          SEND
        </span>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
